added timestamps for videos + default image of videos

--- a/client-myjss/src/app/modules/my-services/components/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/components/announcement/announcement.component.html
@@ -26,14 +26,14 @@
   </div>
 </section>
 
-<explaination-video posterPath="assets/img/announcement/annonce_bandeau_img.jpg" videoPath="assets/videos/al.mp4"
-  title="Publiez votre annonce en 3 étapes" firstStepTitle="Sélectionnez votre modèle"
+<explaination-video posterPath="assets/img/myjss-services/MyJssVideo-poster.png" videoPath="assets/videos/al.mp4"
+  title="Publiez votre annonce en 3 étapes" firstStepTitle="Sélectionnez votre type d’annonce"
   firstStepDescription="Accédez à une bibliothèque complète de formulaires adaptés à vos besoins en annonces légales."
   secondStepTitle=" Remplissez, visualisez et validez votre annonce"
   secondStepDescription="Profitez d’une saisie libre ou guidée et obtenez le prix instantanément."
   thirdStepTitle="Complétez vos coordonnées et payez"
   thirdStepDescription="Bénéficiez d’une interface sécurisée et fiable pour le traitement de vos informations bancaires."
-  [firstJumpTo]="5" [secondJumpTo]="15"></explaination-video>
+  [firstJumpTo]="27.7" [secondJumpTo]="33" [thirdJumpTo]="43.2"></explaination-video>
 
 <description-my-account
   firstStepText="Accédez à l’ensemble de vos devis, commandes et suivez leur état d’avancement en temps réel."
