--- a/client-myjss/src/app/modules/my-services/components/document/document.component.html
+++ b/client-myjss/src/app/modules/my-services/components/document/document.component.html
@@ -26,13 +26,13 @@
 </section>
 
 
-<explaination-video posterPath="assets/img/announcement/annonce_bandeau_img.jpg" videoPath="assets/videos/doc.mp4"
+<explaination-video posterPath="assets/img/myjss-services/MyJssVideo-poster.png" videoPath="assets/videos/doc.mp4"
   title="Récupérez les documents nécessaires à vos transactions ou formalités"
   firstStepTitle="Choisissez les documents dont vous avez besoin"
   firstStepDescription="Nous vous fournissons tous types de documents disponibles auprès des autorités compétentes : Kbis, registres, Actes, CNO, Etats complets, RBE."
   secondStepTitle="Validez votre commande"
   secondStepDescription="Dès validation nos équipes se mobilisent pour obtenir vos pièces dans les meilleurs délais."
-  [firstJumpTo]="5" [secondJumpTo]="15"></explaination-video>
+  [firstJumpTo]="28" [secondJumpTo]="37"></explaination-video>
 
 <description-my-account
   firstStepText="Suivi de votre dossier en ligne via MyJSS, avec une mise à jour en temps réel de l’avancement."
