--- a/client-myjss/src/app/modules/my-services/components/apostille/apostille.component.html
+++ b/client-myjss/src/app/modules/my-services/components/apostille/apostille.component.html
@@ -25,15 +25,15 @@
   </div>
 </section>
 
-<explaination-video posterPath="assets/img/announcement/annonce_bandeau_img.jpg"
+<explaination-video posterPath="assets/img/myjss-services/MyJssVideo-poster.png"
   videoPath="assets/videos/apostilles.mp4" title="Authentifiez vos documents pour l’étranger en 3 étapes"
   firstStepTitle="Remplissez le bon de commande"
   firstStepDescription="Indiquez le type de document, le pays de destination et les éventuelles traductions."
   secondStepTitle="Envoyez les originaux"
   secondStepDescription="Transmettez les documents originaux à cette adresse : <br/>JSS - Service Apostilles Légalisations, <br/>10 Boulevard Haussmann, <br/>75009 Paris"
   thirdStepTitle="Récupérez vos documents authentifiés"
-  thirdStepDescription="Recevez vos documents selon les modalités que vous aurez précisées." [firstJumpTo]="5"
-  [secondJumpTo]="15"></explaination-video>
+  thirdStepDescription="Recevez vos documents selon les modalités que vous aurez précisées."
+  [firstJumpTo]="28"></explaination-video>
 
 <description-my-account
   firstStepText="Suivi de votre dossier en ligne via MyJSS, avec une mise à jour en temps réel de l’avancement."
