--- a/client-myjss/src/app/modules/my-services/components/domiciliation/domiciliation.component.html
+++ b/client-myjss/src/app/modules/my-services/components/domiciliation/domiciliation.component.html
@@ -26,14 +26,15 @@
 </section>
 
 
-<explaination-video posterPath="assets/img/announcement/annonce_bandeau_img.jpg"
+<explaination-video posterPath="assets/img/myjss-services/MyJssVideo-poster.png"
   videoPath="assets/videos/domiciliation.mp4" title="Domiciliez votre entreprise en 3 étapes"
   firstStepTitle="Choisissez votre formule"
   firstStepDescription="Sélectionnez le type de renvoi de courrier (postal, digital ou les deux) et la langue (FR/EN) de rédaction de votre contrat."
   secondStepTitle="Téléversez les pièces justificatives"
   secondStepDescription="Déposez les pièces nécessaires à l'établissement de votre contrat de domiciliation directement sur le site. Ces pièces varient si c'est une société ou une succursale à domicilier."
   thirdStepTitle="Recevez votre contrat par email"
-  thirdStepDescription="Dès la signature de votre contrat, il vous est envoyé par mail et votre société est domiciliée."></explaination-video>
+  thirdStepDescription="Dès la signature de votre contrat, il vous est envoyé par mail et votre société est domiciliée."
+  [firstJumpTo]="34"></explaination-video>
 
 <description-my-account
   firstStepText="Suivi de votre dossier en ligne via MyJSS et consultation des pièces obligatoires, avec une mise à jour en temps réel de l’avancement."
