--- a/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
+++ b/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
@@ -27,13 +27,14 @@
 </section>
 
 
-<explaination-video posterPath="assets/img/announcement/annonce_bandeau_img.jpg" videoPath="assets/videos/formalite.mp4"
+<explaination-video posterPath="assets/img/myjss-services/MyJssVideo-poster.png" videoPath="assets/videos/formalite.mp4"
   title="Déposez votre formalité en 3 étapes" firstStepTitle="Identifiez la structure concernée"
   firstStepDescription="Saisissez les informations de la structure à créer ou le SIRET de l’entité existante."
   secondStepTitle="Sélectionnez votre formalité  "
   secondStepDescription="Choisissez les évènements ou mises à jour à formaliser."
   thirdStepTitle="Remplissez le bon de commande et téléversez les pièces justificatives"
-  thirdStepDescription="Naviguez sur une interface sécurisée et optimisée pour un traitement rapide et fiable de vos informations."></explaination-video>
+  thirdStepDescription="Naviguez sur une interface sécurisée et optimisée pour un traitement rapide et fiable de vos informations."
+  [firstJumpTo]="18.9" [secondJumpTo]="27.7" [thirdJumpTo]="33"></explaination-video>
 
 <description-my-account
   firstStepText="Suivi de votre dossier en ligne via MyJSS et consultation des pièces obligatoires, avec une mise à jour en temps réel de l’avancement."
