--- a/client-jss/src/app/main/components/announcement/announcement.component.html
+++ b/client-jss/src/app/main/components/announcement/announcement.component.html
@@ -56,7 +56,7 @@
         <div class="row justify-content-center" *ngIf="announcement && !announcement.isLegacy">
           <div class="col-12 col-md-6 text-center">
             <button class="btn btn-lg download-btn w-100 w-md-auto rounded-1" type="submit"
-              (click)="downloadPublicationReceipt()">
+              (click)="downloadPublicationFlag()">
               <span class="d-md-block">Télécharger le témoin de parution</span>
             </button>
           </div>
