--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -247,7 +247,7 @@
           </button>
         </form>
         <!-- Search form END -->
-        <p class="small mb-0">ex : droit des société, tribunal d'instance, TUP </p>
+        <p class="small mb-0">ex : droit des sociétés, tribunal d'instance, TUP </p>
       </div>
     </div>
     <div class="row">
