--- a/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
+++ b/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
@@ -15,9 +15,12 @@
 </section>
 
 <section class="pb-3">
-  <div class="jarallax" data-jarallax>
+  <div class="jarallax  d-none d-md-block" data-jarallax>
     <div class="jarallax-img" style="background-image: url(assets/img/societe/a-propos/banniere_a_propos.jpg);">
     </div>
+  </div>
+  <div class="d-block d-md-none">
+    <img src="assets/img/societe/a-propos/banniere_a_propos.jpg" />
   </div>
 </section>
 
