--- a/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
+++ b/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
@@ -13,9 +13,12 @@
 </section>
 
 <section class="pb-3 pb-5">
-  <div class="jarallax" data-jarallax>
+  <div class="jarallax  d-none d-md-block" data-jarallax>
     <div class="jarallax-img" style="background-image: url(assets/img/societe/join-us/join_us_banner.jpg);">
     </div>
+  </div>
+  <div class="d-block d-md-none">
+    <img src="assets/img/societe/join-us/join_us_banner.jpg" />
   </div>
 </section>
 
