--- a/client-myjss/src/app/modules/company/components/our-story/our-story.component.html
+++ b/client-myjss/src/app/modules/company/components/our-story/our-story.component.html
@@ -20,9 +20,12 @@
 </div>
 
 <section class="pb-5 my-5">
-  <div class="jarallax" data-jarallax>
+  <div class="jarallax d-none d-md-block" data-jarallax>
     <div class="jarallax-img" style="background-image: url(assets/img/societe/our-story/banner.jpg);">
     </div>
+  </div>
+  <div class="d-block d-md-none">
+    <img src="assets/img/societe/our-story/banner.jpg" />
   </div>
 </section>
 
