--- a/client-myjss/src/app/modules/general/components/contact/contact.component.html
+++ b/client-myjss/src/app/modules/general/components/contact/contact.component.html
@@ -19,11 +19,16 @@
     </div>
   </div>
 </section>
+
 <section>
-  <div class="jarallax jarallax-size overflow-hidden z-2" data-img-size="contain" data-speed="0.5">
+  <div class="jarallax jarallax-size overflow-hidden z-2  d-none d-md-block" data-img-size="contain" data-speed="0.5">
     <div class="jarallax-img " style="background-image: url('assets/img/others/contact-jarallax.jpg'); "></div>
   </div>
+  <div class="d-block d-md-none">
+    <img src="assets/img/others/contact-jarallax.jpg" />
+  </div>
 </section>
+
 <section class="container my-5">
   <div class="pb-sm-3 pt-4">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 pt-2 justify-content-between">
@@ -97,8 +102,11 @@
 </section>
 
 <section>
-  <div class="jarallax overflow-hidden z-2" data-speed="0.5">
+  <div class="jarallax overflow-hidden z-2 d-none d-md-block" data-speed="0.5">
     <div class="jarallax-img" style="background-image: url('assets/img/others/map.png');"></div>
+  </div>
+  <div class="d-block d-md-none">
+    <img src="assets/img/others/map.png" />
   </div>
 </section>
 
