--- a/client-myjss/src/app/modules/my-services/components/apostille/apostille.component.html
+++ b/client-myjss/src/app/modules/my-services/components/apostille/apostille.component.html
@@ -19,9 +19,12 @@
   </div>
 </section>
 <section>
-  <div class="jarallax rounded overflow-hidden z-2" data-speed="0.5">
+  <div class="jarallax rounded overflow-hidden z-2 d-none d-md-block" data-speed="0.5">
     <div class="jarallax-img"
       style="background-image: url('/assets/img/myjss-services/apostilles/banniere_apostilles.jpg');"></div>
+  </div>
+  <div class="d-block d-md-none">
+    <img src="assets/img/myjss-services/apostilles/banniere_apostilles.jpg" />
   </div>
 </section>
 
