--- a/client-myjss/src/app/modules/my-services/components/document/document.component.html
+++ b/client-myjss/src/app/modules/my-services/components/document/document.component.html
@@ -19,12 +19,14 @@
   </div>
 </section>
 <section>
-  <div class="jarallax overflow-hidden z-2" data-speed="0.5">
+  <div class="jarallax overflow-hidden z-2 d-none d-md-block" data-speed="0.5">
     <div class="jarallax-img"
       style="background-image: url('/assets/img/myjss-services/documents/banniere_document.png');"></div>
   </div>
+  <div class="d-block d-md-none">
+    <img src="assets/img/myjss-services/documents/banniere_document.png" />
+  </div>
 </section>
-
 
 <explaination-video posterPath="assets/img/myjss-services/MyJssVideo-poster.png" videoPath="assets/videos/doc.mp4"
   title="Récupérez les documents nécessaires à vos transactions ou formalités"
