--- a/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
+++ b/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
@@ -19,13 +19,15 @@
   </div>
 </section>
 <section>
-  <div class="jarallax overflow-hidden z-2" data-speed="0.5">
+  <div class="jarallax overflow-hidden z-2 d-none d-md-block" data-speed="0.5">
     <div class="jarallax-img"
       style="background-image: url('/assets/img/myjss-services/formalites/banniere_formalite.jpg');">
     </div>
   </div>
+  <div class="d-block d-md-none">
+    <img src="assets/img/myjss-services/formalites/banniere_formalite.jpg" />
+  </div>
 </section>
-
 
 <explaination-video posterPath="assets/img/myjss-services/MyJssVideo-poster.png" videoPath="assets/videos/formalite.mp4"
   title="Déposez votre formalité en 3 étapes" firstStepTitle="Identifiez la structure concernée"
