--- a/client-myjss/src/app/modules/tools/components/mandatory-documents/mandatory-documents.component.html
+++ b/client-myjss/src/app/modules/tools/components/mandatory-documents/mandatory-documents.component.html
@@ -13,9 +13,12 @@
   </div>
 </section>
 <section>
-  <div class="jarallax overflow-hidden z-2" data-speed="0.5">
+  <div class="jarallax overflow-hidden z-2 d-none d-md-block" data-speed="0.5">
     <div class="jarallax-img"
       style="background-image: url('assets/img/my-jss-tools/mandatory-documents-jarallax.jpg');"></div>
+  </div>
+  <div class="d-block d-md-none">
+    <img src="assets/img/my-jss-tools/mandatory-documents-jarallax.jpg" />
   </div>
 </section>
 
