--- a/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
+++ b/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
@@ -12,12 +12,14 @@
 </section>
 
 <section>
-  <div class="jarallax overflow-hidden z-2" data-speed="0.5">
+  <div class="jarallax overflow-hidden z-2 d-none d-md-block" data-speed="0.5">
     <div class="jarallax-img" style="background-image: url('/assets/img/my-jss-tools/Webinaire.png');">
     </div>
   </div>
+  <div class="d-block d-md-none">
+    <img src="assets/img/my-jss-tools/Webinaire.png" />
+  </div>
 </section>
-
 
 <section class="dark-blue-dropdown">
   <section class="container pt-5 pb-lg-2 pb-xl-4 py-xxl-5 my-5">
