--- a/client-jss/src/app/main/components/post/post.component.html
+++ b/client-jss/src/app/main/components/post/post.component.html
@@ -8,9 +8,9 @@
         <div class="row pt-2">
           <div class="col-12">
             <ng-container *ngIf="post.jssCategories!=null && post.jssCategories.length>0">
-              <a *ngFor="let category of post.jssCategories | slice : 1 " style="cursor: pointer;"
-                [routerLink]='"/post/category/" + category.slug' class="my-2 margin-category fw-bold"
-                [style.background-color]="category.color+' !important'">{{category.name}}</a>
+              <a *ngFor="let category of post.jssCategories  " style="cursor: pointer;"
+                [routerLink]='"/post/category/" + category.slug'
+                class="my-2 margin-category fw-bold p-1">{{category.name}}</a>
             </ng-container>
             <h1 class="mt-2"><img *ngIf="post.isPremium" class="px-0 me-1" src="/assets/images/premium-icon.svg">
               {{post.titleText}} </h1>
