--- a/client-myjss/src/app/modules/company/components/our-team/our-team.component.html
+++ b/client-myjss/src/app/modules/company/components/our-team/our-team.component.html
@@ -17,9 +17,12 @@
 </div>
 
 <section class="pb-5 my-5">
-  <div class="jarallax" data-jarallax>
+  <div class="jarallax d-none d-md-block" data-jarallax>
     <div class="jarallax-img" style="background-image: url(assets/img/societe/team/our_team_banner.jpg);">
     </div>
+  </div>
+  <div class="d-block d-md-none">
+    <img src="assets/img/societe/team/our_team_banner.jpg" />
   </div>
 </section>
 
