--- a/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
+++ b/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
@@ -14,6 +14,9 @@
         <div class="w-100 text-white">
           <h1 class="display-3 text-white">MyJSS, <br>votre droit à l'excellence</h1>
         </div>
+        <div class="w-100 text-white pb-4">
+          <h4 class="text-white">Notre savoir faire pour votre esprit libre</h4>
+        </div>
         <double-buttons class="text-grey" orderActionLabel=" Publier une annonce légale"
           [orderActionRoute]="'/quotation/new/'+serviceFamilyGroupAnnouncement!.id+'/'+quotationTypeOrder.id"
           quotationActionLabel="Déposer une formalité"
