--- a/client-myjss/src/app/modules/my-account/components/billing-closure/billing-closure.component.html
+++ b/client-myjss/src/app/modules/my-account/components/billing-closure/billing-closure.component.html
@@ -2,6 +2,21 @@
   <h1 class="h2 mb-3 mb-sm-0">Relevé de compte</h1>
 
   <div class="d-flex flex-sm-row ms-sm-auto gap-2">
+    <div ngbDropdown [autoClose]="'outside'" class="btn-group dropdown" style="margin-right: 10px;"
+      *ngIf="responsablesForCurrentUser && responsablesForCurrentUser.length>0">
+      <button type="button" class="btn btn-outline-secondary dropdown-toggle" ngbDropdownToggle aria-haspopup="true"
+        aria-expanded="false">
+        <i class="ai-filter me-2"></i>
+        Responsables
+      </button>
+      <div ngbDropdownMenu class="dropdown-menu my-1">
+        <label class=" dropdown-item" *ngFor="let respo of responsablesForCurrentUser">
+          <input class="form-check-input me-2" type="checkbox" value="" [(ngModel)]="responsableCheck[respo.id]"
+            (change)="changeFilter()">
+          {{respo.firstname}} {{respo.lastname}}
+        </label>
+      </div>
+    </div>
     <div ngbDropdown class="btn-group dropdown">
       <button type="button" class="btn btn-outline-secondary dropdown-toggle" ngbDropdownToggle aria-haspopup="true"
         aria-expanded="false">
