--- a/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
@@ -169,6 +169,17 @@
         <div ngbAccordionBody>
           <ng-template>
             <ul ngbNav #nav="ngbNav" [activeId]="0" class="nav-tabs  justify-content-center">
+              <li [ngbNavItem]="0" *ngIf="order && order.description">
+                <button ngbNavLink>Informations complémentaires</button>
+                <ng-template ngbNavContent>
+                  <div>
+                    <label for="text-textarea" class="form-label">Commentaire</label>
+                    <div> <textarea class="form-control" id="text-textarea" [(ngModel)]="order.description" rows="5"
+                        disabled="true"></textarea>
+                    </div>
+                  </div>
+                </ng-template>
+              </li>
               <li [ngbNavItem]="1" *ngIf="service.assoServiceDocuments && service.assoServiceDocuments.length>0">
                 <button ngbNavLink>Déposer des documents</button>
                 <ng-template ngbNavContent>
