--- a/client-myjss/src/app/modules/my-services/components/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/components/announcement/announcement.component.html
@@ -20,9 +20,12 @@
   </div>
 </section>
 <section>
-  <div class="jarallax overflow-hidden z-2" data-speed="0.5">
+  <div class="jarallax overflow-hidden z-2  d-none d-md-block" data-speed="0.5">
     <div class="jarallax-img"
       style="background-image: url('/assets/img/myjss-services/announcement/banniere_annonces.jpg');"></div>
+  </div>
+  <div class="d-block d-md-none">
+    <img src="assets/img/myjss-services/announcement/banniere_annonces.jpg" />
   </div>
 </section>
 
