--- a/client/src/app/modules/quotation/components/customer-order-comment/customer-order-comment.component.html
+++ b/client/src/app/modules/quotation/components/customer-order-comment/customer-order-comment.component.html
@@ -61,13 +61,8 @@
               client)</span></span><button mat-icon-button matTooltip="Editer le commentaire" color="accent"
             class="edit-icon" *ngIf="canEditComment(comment)" (click)="editComment(comment)"><mat-icon>edit</mat-icon>
           </button>
-          <button mat-icon-button matTooltip="Marquer comme non lu"
-            *ngIf="comment.activeDirectoryGroups && comment.activeDirectoryGroups.length>0 && comment.isRead"
-            class="read-icon" (click)="confirmReading(comment)"><mat-icon>visibility_off</mat-icon>
-          </button>
-          <button mat-icon-button matTooltip="Marquer comme lu"
-            *ngIf="comment.activeDirectoryGroups&& comment.activeDirectoryGroups.length>0 && !comment.isRead"
-            class="read-icon" (click)="confirmReading(comment)"><mat-icon>visibility</mat-icon>
+          <button mat-icon-button matTooltip="Commentaire visible du client" *ngIf="comment.isToDisplayToCustomer"
+            class="read-icon"><mat-icon>visibility</mat-icon>
           </button>
         </div>
         <div class="bubble-arrow" [class.bubble-arrow-for-myself]="comment.isCurrentUserInGroup"></div>
