--- a/client-osiris/src/app/modules/main/components/page-title/page-title.component.html
+++ b/client-osiris/src/app/modules/main/components/page-title/page-title.component.html
@@ -5,7 +5,7 @@
 
   <div class="text-end">
     <ol class="breadcrumb m-0 py-0">
-      <li class="breadcrumb-item"><a routerLink="/">Inspinia</a></li>
+      <li class="breadcrumb-item"><a routerLink="/">Journal Spécial des Sociétés</a></li>
       <li class="d-flex justify-content-center align-items-center">
         <ng-icon name="tablerChevronRight" size="14" class="breadcrumb-arrow  mx-1" />
       </li>
