--- a/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
+++ b/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
@@ -12,7 +12,7 @@
     <div class="row justify-content-between align-items-center">
       <div class="col-lg-8 col-auto h-100 text-left">
         <div class="w-100 text-white">
-          <h1 class="display-3 text-white">MyJSS, <br>votre droit à l'excellence</h1>
+          <h1 class="display-3 text-white">MyJSS, <br>votre droit à l'Excellence</h1>
         </div>
         <div class="w-100 text-white pb-4">
           <h4 class="text-white">Notre savoir faire pour votre esprit libre</h4>
