--- a/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
+++ b/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
@@ -159,7 +159,7 @@
       <div class="col">
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body">
-            <h3 class="h4">Redaction</h3>
+            <h3 class="h4">Rédaction</h3>
             <p class="mb-0">Les journalistes du Journal Spécial des Sociétés traitent de l’actualité de la vie du droit
               et du chiffre avec curiosité et talent.</p>
           </div>
