--- a/client-myjss/src/app/modules/tools/components/mandatory-documents/mandatory-documents.component.css
+++ b/client-myjss/src/app/modules/tools/components/mandatory-documents/mandatory-documents.component.css
@@ -10,3 +10,21 @@
 .custom-input-group {
   --ar-input-group-border-color: var(--ar-gray-500);
 }
+
+::ng-deep .custom-tooltip .tooltip-inner {
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #ccc;
+}
+
+::ng-deep .custom-tooltip .tooltip-arrow::before {
+  border-top-color: #fff;
+}
+
+.btn-icon-only {
+  padding: 0.25rem 0.4rem;
+  line-height: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
