--- a/client-osiris/src/app/modules/reporting/components/reporting-chart/reporting-chart.component.html
+++ b/client-osiris/src/app/modules/reporting/components/reporting-chart/reporting-chart.component.html
@@ -1,6 +1,6 @@
-@if(options && options.series && options.series.length>0){
-<app-apexchart [options]="options" />
+@if(options && options.series){
+<app-echart [options]="options" />
 }
 @if(data && columns){
-<tanstack-table [data]="data" [columns]="columns" />
+<tanstack-table [data]="data" [columns]="columns" className="" />
 }
