--- a/client-osiris/src/app/modules/reporting/components/tanstack-table/tanstack-table.component.html
+++ b/client-osiris/src/app/modules/reporting/components/tanstack-table/tanstack-table.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-12">
-    <div class="card  " [ngClass]="className">
+    <div class="" [ngClass]="className">
       <div class="card-header justify-content-between align-items-center" *ngIf="title">
         <h5 class="card-title">{{title}}</h5>
       </div>
@@ -8,8 +8,8 @@
         <div class="card-header justify-content-between">
           <div>
             <div class="app-search">
-              <input type="search" class="form-control" (input)="table.setGlobalFilter($any($event.target).value)"
-                placeholder="Rechercher...">
+              <input type="search" class="form-control" [(ngModel)]="searchValue"
+                (input)="table.setGlobalFilter($any($event.target).value)" placeholder="Rechercher...">
               <lucide-angular [img]="LucideSearch" class="app-search-icon text-muted" />
             </div>
           </div>
