--- a/client-osiris/src/app/modules/reporting/components/reporting-chart/reporting-chart.component.html
+++ b/client-osiris/src/app/modules/reporting/components/reporting-chart/reporting-chart.component.html
@@ -1,5 +1,5 @@
 @if(options && options.series){
-<app-echart [options]="options" />
+<app-echart [options]="options" (chartInit)="listenChartClick($event)" />
 }
 @if(data && columns){
 <tanstack-table [data]="data" [columns]="columns" className="" />
