--- a/client-osiris/src/app/modules/reporting/components/reporting-chart/reporting-chart.component.html
+++ b/client-osiris/src/app/modules/reporting/components/reporting-chart/reporting-chart.component.html
@@ -1,5 +1,6 @@
-@if(options && options.series){
-<app-echart [options]="options" (chartInit)="listenChartClick($event)" />
+@if(series && series.length>0){
+<app-echart [series]="series" [showLegend]="showLegend" (categoryClicked)="categoryClicked($event)"
+  [title]="widget.label" [unit]="widget.lastValueUnit" [labelType]="widget.labelType" />
 }
 @if(data && columns){
 <tanstack-table [data]="data" [columns]="columns" className="" />
