--- a/client-osiris/src/app/modules/tiers/components/responsables-home-kpi/responsables-home-kpi.component.html
+++ b/client-osiris/src/app/modules/tiers/components/responsables-home-kpi/responsables-home-kpi.component.html
@@ -25,13 +25,13 @@
             <div>
               <h4 class="card-title mb-0  w-100">CA HT vs CA HT N-1 </h4>
               <div>
-                <app-echart [options]="getAnalyticChartOptions()" />
+                <!-- <app-echart [options]="getAnalyticChartOptions()" /> -->
               </div>
             </div>
             <div>
               <h4 class="card-title mb-0">CA HT et HD vs CA HT et HD N-1 </h4>
               <div>
-                <app-echart [options]="getAnalyticChartOptions()" />
+                <!-- <app-echart [options]="getAnalyticChartOptions()" /> -->
               </div>
             </div>
           </div>
