--- a/client-osiris/src/app/libs/echart/echart.component.html
+++ b/client-osiris/src/app/libs/echart/echart.component.html
@@ -1,4 +1,4 @@
-@if(options){
+@if(options && series && series.length>0){
 <div echarts [options]="options" [autoResize]="true" [ngStyle]="{ minHeight: height, width: width }"
   (chartInit)="onChartInit($event)" [initOpts]="{ locale: 'FR' }"></div>
 }
