--- a/client-osiris/src/app/modules/tiers/components/responsables-main-kpi/responsables-main-kpi.component.html
+++ b/client-osiris/src/app/modules/tiers/components/responsables-main-kpi/responsables-main-kpi.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-body p-0">
-    <kpi-generic #kpiComponent [selectedDisplayedPageCode]="TIERS_HOME_DISPLAY"
+    <kpi-generic #kpiComponent [selectedDisplayedPageCode]="TIERS_MAIN_DISPLAY"
       [selectedResponsables]="selectedResponsables"></kpi-generic>
   </div>
 </div>
