--- a/client-osiris/src/app/modules/reporting/components/reporting-chart/reporting-chart.component.html
+++ b/client-osiris/src/app/modules/reporting/components/reporting-chart/reporting-chart.component.html
@@ -1,6 +1,6 @@
 @if(series && series.length>0){
 <app-echart [series]="series" (categoryClicked)="categoryClicked($event)" [title]="widget.label"
-  [unit]="widget.lastValueUnit" [labelType]="widget.labelType" />
+  [unit]="widget.lastValueUnit" [labelType]="widget.labelType" [height]="widget.minHeight" />
 }
 @if(data && columns){
 <tanstack-table [data]="data" [columns]="columns" className="" />
